<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.courtcounter.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scorekeepback"
        android:contentDescription="@string/resource_description"
        android:scaleX="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="11dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/collegeblock"
                android:text="@string/Team_1"
                android:textColor="@color/teamColor"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/home_team_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/collegiateheavyoutlinemedium"
                android:text="@string/Home_Score"
                android:textColor="@android:color/darker_gray"
                android:textSize="56sp" />

            <Button
                android:id="@+id/tdHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="tdHome"
                android:text="@string/touchdown"
                android:textColor="@color/button_font_color"
                android:textSize="18sp" />

            <Button
                android:id="@+id/twoHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="plus2Home"
                android:text="@string/_2"
                android:textColor="@color/button_font_color"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/oneHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="plus1Home"
                android:text="@string/_1"
                android:textColor="@color/button_font_color"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/cancelHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="cancelHome"
                android:text="@string/cancel"
                android:textColor="@color/button_font_color"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/fgHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="fgHome"
                android:text="@string/field_goal"
                android:textColor="@color/button_font_color"
                android:textSize="18sp" />

            <Button
                android:id="@+id/safetyHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="safetyHome"
                android:text="@string/safety"
                android:textColor="@color/button_font_color"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="11dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/collegeblock"
                android:text="@string/Team_2"
                android:textColor="@color/teamColor"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/away_team_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/collegiateheavyoutlinemedium"
                android:text="@string/Away_Score"
                android:textColor="@android:color/darker_gray"
                android:textSize="56sp" />

            <Button
                android:id="@+id/tdAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="tdAway"
                android:text="@string/touchdown"
                android:textColor="@color/button_font_color"
                android:textSize="18sp" />

            <Button
                android:id="@+id/twoAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="plus2Away"
                android:text="@string/_2"
                android:textColor="@color/button_font_color"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/oneAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="plus1Away"
                android:text="@string/_1"
                android:textColor="@color/button_font_color"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/cancelAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="cancelAway"
                android:text="@string/cancel"
                android:textColor="@color/button_font_color"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/fgAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="fgAway"
                android:text="@string/field_goal"
                android:textColor="@color/button_font_color"
                android:textSize="18sp" />

            <Button
                android:id="@+id/safetyAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/collegeblock"
                android:onClick="safetyAway"
                android:text="@string/safety"
                android:textColor="@color/button_font_color"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/collegeblock"
        android:onClick="scoreReset"
        android:text="@string/reset"
        android:textColor="@color/button_font_color"
        android:textSize="18sp" />

</RelativeLayout>
